<resources>
    <string name="app_name">Gbudget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome</string>
    <string name="signin">Sign in</string>
    <string name="useremail">Useremail</string>
    <string name="Password">Password</string>
    <string name="YourEmail">Email</string>
    <string name="Signup">Sign up</string>
    <string name="addto">Add to</string>
    <string name="Article">Article:</string>
    <string name="Price">Price:</string>
    <string name="add">Add</string>
    <string name="Category">Category</string>
    <string name="YourTotalExpenses">Your Total Expenses</string>
    <string name="text">text</string>
    <string name="Today">Today</string>
</resources>