<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in"
    android:background="@drawable/sign_in"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:orientation="vertical"
        android:paddingTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useremail" />


        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/passtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="46dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/signin"
        android:layout_width="315dp"
        android:layout_height="72dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/but"
        android:drawableEnd="@drawable/ic_trending_neutral_24dp"
        android:gravity="left|center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.837"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>